# mochi-desktop

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  USAGE.md
.github/workflows/: agent-sdk.yml  audit.yml  ci.yml
docs/research/: stale-memory-application.md
examples/: llama_smoke.rs
skills/code-coach/: SKILL.md
skills/grumpy-cat/: SKILL.md
src/: chat_repl.rs  lib.rs  llama_server.rs  logging.rs  main.rs  memory.rs  memory_capture.rs  memory_judge.rs  memory_query.rs  pet.rs  skills.rs
src/agent/: llama_client.rs  mod.rs
src/app/: input_submit.rs  notify.rs  paste_burst.rs
src/app/connect/: llama_lifecycle.rs  mod.rs
src/app/events/: client.rs
src/app/slash/: candidates.rs  executors.rs
src/app/state/: mod.rs
src/tools/: bash.rs  edit.rs  find_file.rs  glob.rs  mod.rs  multi_edit.rs  read.rs  read_file.rs  web_fetch.rs  web_search.rs  write.rs
src/ui/: chat_view.rs  message.rs  mod.rs  pet_overlay.rs  trusted.rs
tests/: memory_legacy_migration.rs  memory_stale_scenarios.rs
