[package]
name = "mochi"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
description = "Terminal AI agent with a pixel-art pet companion, local-first via llama.cpp"
keywords = ["cli", "tui", "ai", "terminal", "pet"]
categories = ["command-line-interface"]
default-run = "mochi"

[lib]
name = "claude_code_rust"
path = "src/lib.rs"

[[bin]]
name = "mochi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
ansi-to-tui = "8.0.1"
arboard = { version = "3.6.1", features = ["image-data"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
ignore = "0.4.25"
notify = "8.2.0"
notify-rust = "4.17.0"
pulldown-cmark = "0.13.3"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "stream"] }
eventsource-stream = "0.2.3"
async-stream = "0.3.6"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "3.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tui-markdown = { version = "0.3.7" }
tui-textarea-2 = "0.11.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
uuid = { version = "1.23.1", features = ["v4"] }
which = "8.0.2"

[features]
perf = []

[profile.dev]
debug = "line-tables-only"
incremental = false

[profile.dev.package."*"]
debug = false

[profile.dev.build-override]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = false

[profile.test.package."*"]
debug = false

[profile.test.build-override]
debug = false

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.25.0"

[lints.clippy]
# Deny panic-prone operations in production code (tests exempted via clippy.toml)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# CLI tools legitimately print to stdout/stderr
print_stdout = "allow"
print_stderr = "allow"

# Pedantic with noisy exceptions disabled
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Lint categories
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# CLI-specific
exit = "deny"
shadow_same = "warn"
shadow_unrelated = "allow"
str_to_string = "warn"
